# dream_team_assistant_bot

./: README.md  main.py  pyproject.toml  requirements.txt
assistant/: __init__.py
assistant/application/: contact_service.py  note_service.py
assistant/domain/: contacts.py  exceptions.py  notes.py
assistant/infrastructure/: json_storage.py
assistant/presentation/: cli_router.py
tests/: test_cli.py  test_contacts.py  test_notes.py  test_storage.py
